2022-05-17  YAMASHITA Tatsuo  <yto@example.com>

	* test-rerankonly.txt: add sample

	* searchii.pl (re_ranking): -

	* rerankonly.pl (re_ranking): sort order: @sortby => length => cmp

2022-03-05  YAMASHITA Tatsuo  <yto@example.com>

	* rerankonly.pl: fix topn

2022-01-30  YAMASHITA Tatsuo  <yto@example.com>

	* rerankonly.pl: fix similarity-functions.

	* searchii.pl: fix similarity-functions.

	* README.md: update.

	* nggrep: new.

2022-01-27  YAMASHITA Tatsuo  <yto@example.com>

	* rerankonly.pl (counthash_to_list): add sort.
	(common_items): remove sort.

	* searchii.pl (counthash_to_list): add sort.
	(common_items): remove sort.

2022-01-24  YAMASHITA Tatsuo  <yto@example.com>

	* README.md: update

	* rerankonly.pl: similarity

	* searchii.pl: add similarity (jaccard, dice, simpson)

2022-01-18  YAMASHITA Tatsuo  <yto@example.com>

	* README.md: update.

2022-01-17  YAMASHITA Tatsuo  <yto@example.com>

	* README.md: 1st version

	* test-rerankonly.txt: new test file for rerankonly.pl

	* rerankonly.pl: divi0, comment chunk prefix

	* searchii.pl: divi0

2022-01-17  Tatsuwo  <yto at example.com>

	* rerankonly.pl: new.

	* searchii.pl (re_ranking): fix.

2022-01-16  Tatsuwo  <yto at example.com>

	* mkii.pl: fix comment

	* searchii.pl: vgscore => vgrate
