@@ -74,6 +74,7 @@ exit;
 sub regstr {
     my ($str) = @_;
     $str =~ tr/Ａ-Ｚａ-ｚ０-９　！”＃＄％＆’（）＊＋，−．／：；＜＝＞？＠［¥］＾＿‘｛｜｝〜/A-Za-z0-9 !"#$%&'()*+,-.\/:;<=>?@[\]^_`{|}~/;
+    $str =~ s/[\x{2010}-\x{2015}\x{2212}\x{FF0D}]/-/g; # hyphen
     return $str;
 }
 
